@@ -1,3 +1,7 @@
+2001-05-02  Bruno Haible  <haible@clisp.cons.org>
+
+	* POTFILES.in: Add lib/xerror.c.
+
 2001-04-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* et.po: New file, from Ivar Smolin <okul@trenet.ee>.
